syntax = "proto3";

option csharp_namespace = "Users.Service";

package Services;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service UserProductHistoryService {
    rpc GetUserProductHistory (UserProductHistoryRequest) returns (GetUserProductHistoryResponse);
    rpc AddUserProductHistory (UserProductHistory) returns (UserProductHistory);
    rpc UpdateUserProductHistory (UserProductHistory) returns (UserProductHistory);
    rpc DeleteUserProductHistory (UserProductHistoryRequest) returns (google.protobuf.Empty);
}

message UserProductHistory {
    int64 id = 1;
    int64 user_id = 2;
    int64 product_id = 3;
    google.protobuf.Timestamp timestamp = 4;
}

message Products {
    int64 id = 1;
    string name = 2;
    int64 product_id = 3;
    google.protobuf.Timestamp timestamp = 4;
}

message GetUserProductHistoryResponse {
    int64 user_id = 1;
    repeated Products products = 2;
}

message UserProductHistoryRequest {
    int64 id = 1;
}